feature(NL): add controllers methods for users & places

--- a/NightLife.API/appsettings.Development.json
+++ b/NightLife.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Server=night-life_postgres;Port=5432;Database=night_life;UserID=night_life_user;Password=night_life;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
